# PM-2026-S1-UYM

./: .gitignore  API_DOCUMENTATION.md  README.md  demographics.ipynb  final_fake_meta_api.py  ga4_app.py  main.py  pyproject.toml  report.csv
api/: __init__.py  config.py  main.py  models.py  service.py
api/routes/: demographics.py  health.py
backend/Google Analytics/: README.md  first_notebook.ipynb  pyproject.toml
backend/Google Analytics/outputs/: ga4_demographics_city.csv  ga4_demographics_country.csv  ga4_demographics_region.csv  ga4_demographics_userAgeBracket.csv  ga4_demographics_userGender.csv
backend/Meta Business Suite/: API_DOCUMENTATION.md  README.md
frontend/dashboard/: README.md  index.html  metadata.json  package-lock.json  package.json
frontend/dashboard/src/: App.tsx  index.css  types.ts
frontend/dashboard/src/components/: Sidebar.tsx  StatsCard.tsx
frontend/dashboard/src/components/monthly/: AgeDemographicsChart.tsx  GenderDistributionChart.tsx  GlobalAudienceReach.tsx  MonthlySummary.tsx
frontend/dashboard/src/components/yearly/: AgeDistributionGrid.tsx  GenderRepresentation.tsx  GrowthTrajectoryChart.tsx  RegionalDistribution.tsx  YearlySummary.tsx
frontend/dashboard/src/data/: mockData.ts
frontend/dashboard/src/pages/: LoginPage.tsx  MonthlyStats.tsx  YearlyStats.tsx
frontend/dashboard/src/services/: analytics.ts
outputs/: ga4_demographics_city.csv  ga4_demographics_country.csv  ga4_demographics_language.csv  ga4_demographics_userAgeBracket.csv  ga4_demographics_userGender.csv
