[project]
name = "pm-2026-s1-uym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-analytics-data>=0.21.0",
    "google-auth-oauthlib>=1.3.1",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
